--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,163 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.bookstore {
+  padding: 30px 50px;
+}
+
+button {
+  background-color: #00d85a;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  font-weight: bold;
+}
+
+button:hover {
+  background-color: #00eb62;
+  transition: background-color 0.2s ease;
+}
+
+.button-red {
+  background-color: #ff6961 !important;
+}
+
+.button-red:hover {
+  background-color: #ff4339 !important;
+  transition: background-color 0.2s ease;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-container h1 {
+  margin-right: 15px;
+  margin-top: 16.5px;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-color: rgb(210, 210, 210);
+  margin-top: -10px;
+}
+
+.no-books-placeholder {
+  font-size: 20px;
+  color: rgb(175, 175, 175);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35vh;
+  transform: translateY(-50%);
+}
+
+.book-popup {
+  position: fixed;
+  width: 350px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 15px;
+}
+
+.book-popup h3 {
+  margin-top: 0;
+}
+
+.book-popup label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.book-popup input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.book-popup button {
+  background-color: #00d85a;
+  color: white;
+  padding: 10px 20px;
+  margin: 15px 10px 0 0;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.book-popup button:hover {
+  background-color: #00eb62;
+  transition: background-color 0.2s ease;
+}
+
+.book-card {
+  min-height: 350px;
+  width: 300px;
+  padding: 5px 10px 65px 20px !important;
+  border: 1px solid rgb(210, 210, 210) !important;
+  border-radius: 15px;
+  position: relative;
+  transition: transform 0.2s ease;
+  display: inline-block;
+  margin: 20px 28px 0 0;
+  background-color: rgb(250, 250, 250);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  vertical-align: top;
+}
+
+.book-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
+}
+
+.book-card button {
+  position: absolute;
+  bottom: 25px;
+  left: 20px;
+}
+
+.book-card span {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .book-card {
+    width: calc(100% - 53px);
+    margin: 20px 10px 10px 10px;
+  }
+
+  .bookstore {
+    padding: 10px;
+  }
+
+  .book-popup {
+    width: 80%;
+  }
 }
